[gd_scene load_steps=10 format=2]

[ext_resource path="res://Games/MemoryGame/MemoryGame.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Space_Grotesk/static/SpaceGrotesk-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Fonts/Space_Grotesk/static/SpaceGrotesk-Light.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Fonts/Space_Grotesk/static/SpaceGrotesk-SemiBold.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.729412, 0.729412, 0.729412, 1 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
corner_detail = 20

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 60
font_data = ExtResource( 4 )

[node name="MemoryGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.7776, 0.88704, 0.96, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deck" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -400.0
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Statistics" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 900.0
margin_right = -30.0
margin_bottom = -230.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sections" type="HBoxContainer" parent="Statistics"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerSection" type="VBoxContainer" parent="Statistics/Sections"]
margin_right = 328.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TimerHeader" type="Label" parent="Statistics/Sections/TimerSection"]
margin_right = 328.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TIME TAKEN:"
align = 1
valign = 2

[node name="Timer" type="Label" parent="Statistics/Sections/TimerSection"]
margin_top = 60.0
margin_right = 328.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "##"
align = 1

[node name="MovesSection" type="VBoxContainer" parent="Statistics/Sections"]
margin_left = 332.0
margin_right = 660.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MovesHeader" type="Label" parent="Statistics/Sections/MovesSection"]
margin_right = 328.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MOVES"
align = 1
valign = 2

[node name="Moves" type="Label" parent="Statistics/Sections/MovesSection"]
margin_top = 60.0
margin_right = 328.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "##"
align = 1

[node name="BackButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -180.0
margin_right = 200.0
margin_bottom = -50.0
custom_fonts/font = SubResource( 4 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameEnd" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameEndContainer" type="VBoxContainer" parent="GameEnd"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 152.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndMessage" type="Label" parent="GameEnd/GameEndContainer"]
margin_right = 720.0
margin_bottom = 182.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "You've Won!"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeTakenMessage" type="Label" parent="GameEnd/GameEndContainer"]
margin_top = 186.0
margin_right = 720.0
margin_bottom = 368.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "Time Taken"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeTaken" type="Label" parent="GameEnd/GameEndContainer"]
margin_top = 372.0
margin_right = 720.0
margin_bottom = 555.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "##"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovesTakenMessage" type="Label" parent="GameEnd/GameEndContainer"]
margin_top = 559.0
margin_right = 720.0
margin_bottom = 741.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "Moves Taken"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovesTaken" type="Label" parent="GameEnd/GameEndContainer"]
margin_top = 745.0
margin_right = 720.0
margin_bottom = 928.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "##"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
